fix spacing on web page

--- a/styles.css
+++ b/styles.css
@@ -321,6 +321,6 @@ button:hover{
     }
 
     .main-image {
-        width: 98%;
+        width: 100%;
     }
 }
